flexible map, fix map error on mobile

--- a/LGDXRobotCloud.UI/Components/Pages/Home/Map.razor.css
+++ b/LGDXRobotCloud.UI/Components/Pages/Home/Map.razor.css
@@ -1,7 +1,11 @@
+#navigation-map-container {
+  position: relative;
+}
+
 #navigation-map-buttons {
   position: absolute;
   right: 1em;
-  top: 10em; 
+  top: 1em;
   background-color: var(--tblr-card-bg);
 }
 
